--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <!-- Cards Section -->
   <div class="col-span-7">
     <h2 class="text-2xl font-bold text-center mb-6">Choose Your Trees</h2>
-    <div id="card-container" class="grid grid-cols-3 gap-6">
+    <div id="card-container" class="grid grid-cols-3 gap-6 items-stretch">
       <!-- Card -->
       
      
