--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 
 <section class="bg-[#CFF0DC]">
-    <div class="banner flex max-w-[1600px] mx-auto justify-between items-center text-center px-4">
+    <div class="banner flex flex-col md:flex-row max-w-[1600px] mx-auto justify-between items-center text-center px-4">
     <!-- left pic -->
     <div>
         <img src="assets/hero-leaf1.png" alt="">
@@ -88,7 +88,7 @@
 
 <!-- flex thing -->
  <!-- category section done it by api json data -->
-   <section class="api grid grid-cols-12 gap-6 max-w-[1600px] mx-auto mt-6 p-10">
+   <section class="api grid grid-cols-1 md:grid-cols-12 gap-6 max-w-[1600px] mx-auto mt-6 p-10">
   <!-- Categories Section -->
   <div class="col-span-2 mt-11">
     <h2 class="text-xl font-bold mb-4">Categories</h2>
@@ -100,7 +100,7 @@
   <!-- Cards Section -->
   <div class="col-span-7">
     <h2 class="text-2xl font-bold text-center mb-6">Choose Your Trees</h2>
-    <div id="card-container" class="grid grid-cols-3 gap-6 items-stretch">
+    <div id="card-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 items-stretch">
       <!-- Card -->
       
      
@@ -125,24 +125,44 @@
 
 </section>
 
+<!-- ------------------------------ -->
+<dialog id="plantModal" class="modal modal-bottom sm:modal-middle">
+  <div class="modal-box">
+    <h3 id="modal-title" class="text-lg font-bold"></h3>
+    <img id="modal-image" class="w-full h-48 object-cover rounded mt-2" alt="Plant image">
+    <p id="modal-description" class="py-4 text-gray-700"></p>
+    <div class="flex justify-between items-center">
+      <span id="modal-category" class="px-3 py-1 text-sm font-medium text-green-700 bg-green-100 rounded-full"></span>
+      <span id="modal-price" class="text-gray-900 font-semibold"></span>
+    </div>
+    <div class="modal-action">
+      <form method="dialog">
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
 
 
 
-    <section class="max-w-[1000px] mx-auto">
-      <h2 class="text-center text-4xl font-bold mb-4">About The Campaign</h2>
 
-      <div class="flex justify-between items-center gap-8">
-        <div><img class="w-[530px]" src="assets/about.png" alt=""></div>
-        <div>
-          <h2>Green Earth is a global tree plantation initiative dedicated to fighting climate change. <br>Since our start, we’ve planted over 500,000 trees worldwide. By joining our campaign,<br> you help restore forests, create habitats for wildlife, and combat global warming.</h2>
-          <ul class="list-disc list-inside">
-            <li>Restoration of natural habitats</li>
-            <li>Improvement of air quality</li>
-            <li>Support for local communities</li>
-          </ul>
-        </div>
-      </div>
-    </section>
+<!-- ------------------------------ -->
+
+ <section class="max-w-[1000px] mx-auto p-4">
+  <h2 class="text-center text-3xl sm:text-4xl font-bold mb-4">About The Campaign</h2>
+
+  <div class="flex flex-col md:flex-row justify-between items-center gap-8">
+    <div><img class="w-full md:w-[530px]" src="assets/about.png" alt=""></div>
+    <div>
+      <p>Green Earth is a global tree plantation initiative ...</p>
+      <ul class="list-disc list-inside mt-2">
+        <li>Restoration of natural habitats</li>
+        <li>Improvement of air quality</li>
+        <li>Support for local communities</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
 
 
